--- a/src/locale/languages/tr.json
+++ b/src/locale/languages/tr.json
@@ -7,7 +7,7 @@
       "CenterAlign": "Ortala",
       "RightAlign": "Sağa Hizala",
       "JustifyAlign": "İki Kenara Yasla",
-      "Outdent": "Çıkıntıyı Azalt",
+      "Outdent": "Girintiyi Azalt",
       "Indent": "Girintiyi Artır"
     },
     "backgroundColorPicker": {
